[gd_scene load_steps=5 format=2]

[ext_resource path="res://EditorTheme/ExpandableSectionButtonHeader.tres" type="Theme" id=1]
[ext_resource path="res://Icons/Editor/GUITreeArrowRight.svg" type="Texture" id=2]
[ext_resource path="res://SceneComponents/Inspector/AssetInfoPanel.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[node name="AssetInfoPanel" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpandButton" type="Button" parent="."]
margin_right = 1024.0
margin_bottom = 22.0
theme = ExtResource( 1 )
toggle_mode = true
text = "Asset"
icon = ExtResource( 2 )
align = 0

[node name="ExpandSection" type="PanelContainer" parent="."]
margin_top = 22.0
margin_right = 1024.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ExpandSection"]
margin_left = 4.0
margin_right = 1020.0
margin_bottom = 26.0

[node name="MarginContainer" type="MarginContainer" parent="ExpandSection/VBoxContainer"]
margin_right = 1016.0
margin_bottom = 26.0
custom_constants/margin_top = 4

[node name="GridContainer" type="GridContainer" parent="ExpandSection/VBoxContainer/MarginContainer"]
margin_top = 4.0
margin_right = 1016.0
margin_bottom = 26.0
custom_constants/vseparation = 2
custom_constants/hseparation = 4
columns = 2

[node name="ExportNumberLabel" type="Label" parent="ExpandSection/VBoxContainer/MarginContainer/GridContainer"]
margin_right = 506.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Export Number"
autowrap = true

[node name="ExportNumberDisplayContainer" type="Control" parent="ExpandSection/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="ExportNumberDisplay" type="LineEdit" parent="ExpandSection/VBoxContainer/MarginContainer/GridContainer/ExportNumberDisplayContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -11.0
margin_bottom = 11.0
editable = false
__meta__ = {
"_edit_use_anchors_": false
}
